[package]
name = "taskerctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.0", features = ["derive"]}
comfy-table = "6.1.4"
derive = "1.0.0"
features = "0.10.0"
tasker = "0.2.1"
